--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -18,8 +18,8 @@
     <a href="https://longdogechallenge.com/">click me</a>
 
     <p><a href="./pages/about.html">about</a></p>
-    <img src="./images/sam.jpg" alt="The Goat" style="width: 600px;height:400px;">
-    <img src="./images/dog.jpg" alt="Charles" style="width: 600px;height:400px;">
+    <img src="./images/sam.jpg" alt="The Goat">
+    <img src="./images/dog.jpg" alt="Charles">
 
     <h4>This is a heading 4</h4>
     <h5 class = "ape">This is Ape</h5>
